--- a/myCrm/src/main/webapp/WEB-INF/web.xml
+++ b/myCrm/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,6 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>CXFServlet</servlet-name>
-  	<url-pattern>/*</url-pattern>
+  	<url-pattern>/ws/*</url-pattern>
   </servlet-mapping>
 </web-app>
